<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#526AEE">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="246dp"
        android:layout_height="126dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/log_saved"
        android:textColor="#3E2723"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/med_details"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/med_name_result"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/pills_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/med_amount_result"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        android:textColor="#3E2723"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_name_result" />

    <Button
        android:id="@+id/button_continue_1"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginTop="152dp"
        android:color="@color/substanceUse_end"
        android:text="@string/continue_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_amount_result" />

    <TextView
        android:id="@+id/med_dosage_result"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/pills_dosage"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_continue_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_amount_result"
        app:layout_constraintVertical_bias="0.195" />

</androidx.constraintlayout.widget.ConstraintLayout>
