<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.DailyLog">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037">
        <ImageView
            android:id="@+id/close"
            android:layout_width="26dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close" />
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="User Progress"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/header">
            <ImageView
                android:id="@+id/ic_brain"
                android:layout_width="54dp"
                android:layout_height="62dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_brain"
                tools:ignore="ContentDescription"/>
            <TextView
                android:id="@+id/lab_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/mood"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mood_layout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/mood_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mood_layout">

            <ImageView
                android:layout_width="54dp"
                android:layout_height="62dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/bed"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/sleep_hours"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
            <TextView
                android:id="@+id/avg_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:text="Sleep Average: "
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        <LinearLayout
            android:id="@+id/sleep_layout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.995">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/sleep_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
            <LinearLayout
                android:id="@+id/symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/ic_symptom"
                    android:layout_width="54dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_symptom"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/lab_symptom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/symptoms"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.anychart.AnyChartView
                android:id="@+id/symptoms_chart"
                android:layout_marginVertical="20sp"
                android:layout_width="match_parent"
                android:layout_height="400dp">

            </com.anychart.AnyChartView>

            <TextView
                android:id="@+id/end_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>